--- a/index.html
+++ b/index.html
@@ -80,5 +80,9 @@
   <script type="module" src="js/allCountries.js"></script>
   <script type="module" src="js/app.js"></script>
  
+  <button id="debugAccessBtn" class="hidden" style="position: fixed; bottom: 20px; right: 20px; z-index: 999; background: #444; color: white; padding: 8px 14px; border: none; border-radius: 8px; cursor: pointer;">
+  🛠️ Debug
+</button>
+
 </body>
 </html>
