--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <button id="createRoomBtn">Créer une partie</button>
         <input type="text" id="roomCodeInput" placeholder="Code de la room" />
         <button id="joinRoomBtn">Rejoindre</button>
+        <button id="spectatorBtn">👁️ Rejoindre comme spectateur</button>
+
       </section>
 
       <!-- Écran de jeu -->
