--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <!-- Relancer -->
         <div style="margin-top: 20px;">
-          <button id="resetGameBtn" class="hidden">🔁 Relancer la partie</button>
+          <button id="relancerBtn" class="hidden">🔁 Relancer la partie</button>
         </div>
       </section>
     </main>
@@ -100,5 +100,3 @@
   <script type="module" src="js/app.js"></script>
 </body>
 </html>
-
-
