--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 
       <!-- Écran de jeu -->
       <section id="game-screen" class="screen hidden">
+        <!-- Relancer -->
+<div style="margin-top: 20px;">
+  <button id="relancerBtn" class="hidden">🔁 Relancer la partie</button>
+</div>
+
         <h2>🎯 Partie : <span id="roomCodeDisplay"></span></h2>
         <div id="playerList"></div>
         <div id="gameStatus"></div>
