--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+!-- ✅ index.html corrigé -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -38,11 +39,6 @@
 
       <!-- Écran de jeu -->
       <section id="game-screen" class="screen hidden">
-        <!-- Relancer -->
-<div style="margin-top: 20px;">
-  <button id="relancerBtn" class="hidden">🔁 Relancer la partie</button>
-</div>
-
         <h2>🎯 Partie : <span id="roomCodeDisplay"></span></h2>
         <div id="playerList"></div>
         <div id="gameStatus"></div>
@@ -79,7 +75,6 @@
     </main>
 
     <!-- Modal Règles -->
-    
     <div id="rulesModal" class="modal hidden">
       <div class="modal-content">
         <h3>📘 Règles du jeu – Le Ballon de Plomb™</h3>
@@ -94,15 +89,11 @@
     </div>
   </div>
 
-  <!-- 🔧 Debug -->
-  <button id="debugAccessBtn" class="hidden" style="position: fixed; bottom: 20px; right: 20px; z-index: 999; background: #444; color: white; padding: 8px 14px; border: none; border-radius: 8px; cursor: pointer;">
-    🛠️ Debug
-  </button>
-
-  <!-- 📦 Scripts -->
-  <script type="module" src="js/firebase.js"></script>
-  <script type="module" src="js/gameEngine.js"></script>
-  <script type="module" src="js/allCountries.js"></script>
-  <script type="module" src="js/app.js"></script>
+  <!-- 🔧 Scripts -->
+  <script type="module" src="js/firebase.js" defer></script>
+  <script type="module" src="js/gameEngine.js" defer></script>
+  <script type="module" src="js/allCountries.js" defer></script>
+  <script type="module" src="js/app.js" defer></script>
 </body>
 </html>
+
