--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Le Ballon de Plomb™</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
+<audio id="endBeep" src="https://freesound.org/data/previews/341/341695_5260877-lq.mp3"></audio>
+
 <body>
   <div id="app">
     <header>
