--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <p>
           Deux camps s’affrontent secrètement :<br>
           🎤 Les Journalistes veulent faire élire un faux Ballon d’Or.<br>
-          💚 Les Supporters doivent élire le vrai Ballon d’Or (désigné par le système).<br><br>
+          💚 Les Supporters doivent élire le vrai Ballon d’Or (désigné par les Amoureux du Foot).<br><br>
           Chaque tour, discutez, votez, et observez les indices… Mais attention aux manipulations !
         </p>
         <button id="closeRulesBtn">Fermer</button>
